try to find a compromise for java startup memory options