@@ -14,7 +14,9 @@ MGR_DEPLOY_MODE=live
 #MGR_DEPLOY_MODE=local
 #JAVA_HOME=
 #ADDITIONAL_PARAMETERS="-Dwebapp.port=8087 -Dwebapp.context.path=/mediamagpie"
-VM_ARGS="-Xmx275m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp -XX:ErrorFile=/var/log/java_hs_err_pid%p.log $ADDITIONAL_PARAMETERS"
+# -Xms256m -Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp
+VM_ARGS="-Xmx256m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp -XX:ErrorFile=/var/log/java_hs_err_pid%p.log $ADDITIONAL_PARAMETERS"
+#VM_ARGS="-Xmx275m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp -XX:ErrorFile=/var/log/java_hs_err_pid%p.log $ADDITIONAL_PARAMETERS"
 #########################
 
 CLASS=de.wehner.mediamagpie.conductor.StartJetty9
